fix: static mongodb url and packagejson version issues.

--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,4 @@
 NODE_ENV=dev
 PORT=
-MONGO_URI=mongodb+srv://murat:NXozvyeWWHe2MQpe@cluster0.zhbqr.mongodb.net/thegame
+MONGO_URI=
 FAKE_PLAYER_COUNT=1000
